--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -39,6 +39,9 @@ body
     &_theme-gray
       background-color #d6d6d6
 
+    &__theme-transparent
+      background-color transparent
+
     &--height-home-page
       min-height 826px
 
