--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -26,6 +26,20 @@ body
     &--part-right
       margin-left 50%
 
+    &--theme-head-banner
+      width 879px
+      height 826px
+      background url("../img/header-home-920px.jpg") no-repeat -334px
+      background-size auto 100%
+
+    &--theme-head-banner-left-part
+      width 920px
+      height 826px
+      margin-left auto
+      background url("../img/header-home-920px.jpg") no-repeat
+      background-size auto 100%
+
+
   //Элемент шапки для контента
   &__content
     width 1172px
