--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -46,7 +46,8 @@ div.main.main--theme-white-gr
                 p.unit__article.unit__article--gray-text Our mission is to provide the highest level of service for our client-partners from concept through construction.
 
 
-            div.unit.unit--theme-foto
+            div.unit.unit--bg-layer-unit.unit--theme-foto
+                div.unit__picture--theme-contr
 
             div.unit.unit--bg-layer-unit
                 div.unit.unit--theme-info
@@ -55,7 +56,8 @@ div.main.main--theme-white-gr
                     p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
                 div.unit__arrow.unit__arrow--left
 
-            div.unit.unit--theme-foto
+            div.unit.unit--bg-layer-unit.unit--theme-foto
+                div.unit__picture--theme-capital
 
             div.unit.unit--theme-info
                 div.unit__fix-padding-unit-with-arrow-hower
@@ -78,7 +80,8 @@ div.main.main--theme-white-gr
                     p.unit__article.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
                 div.unit__arrow.unit__arrow--right
 
-            div.unit.unit--theme-foto
+            div.unit.unit--bg-layer-unit.unit--theme-foto
+                div.unit__picture--theme-desing
 
             div.unit.unit--bg-layer-unit
                 div.unit.unit--white
@@ -101,6 +104,7 @@ div.main.main--theme-white-gr
 
             div.unit.unit--bg-layer-unit
                 div.unit.unit--bg-unit-width959.unit--dark-grey
+                    div.unit__picture--theme-what
                 div.unit.unit--horizontal-double-unit.unit--transparent
                     div.unit__form-search-wrap
                         form.form
@@ -118,11 +122,13 @@ div.main.main--theme-white-gr
 
                 p.unit__article.unit__article--centered-text.unit__article--gray-text Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.
 
-            div.unit.unit--horizontal-double-unit.unit--theme-foto
-                h2.unit__title.unit__title--big-bold.unit__title--big-width.unit__title--black-text.unit__title--fix-big-width Your building is in good hands
-                hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--black-text.unit__article--fix-for-your-buildig-is Our mission is to provide the highest level of service for our client-partners from concept through construction.
-                input.button.button--theme-unit-btn.button--black-bg.button--text-white.button--fix-btn-about-company(type="button", value="About company")
+            div.unit.unit--bg-layer-unit
+                div.unit__picture--theme-good-hands
+                div.unit.unit--horizontal-double-unit
+                    h2.unit__title.unit__title--big-bold.unit__title--big-width.unit__title--black-text.unit__title--fix-big-width Your building is in good hands
+                    hr.unit__horizontal.unit__horizontal--black-solid
+                    p.unit__article.unit__article--black-text.unit__article--fix-for-your-buildig-is Our mission is to provide the highest level of service for our client-partners from concept through construction.
+                    input.button.button--theme-unit-btn.button--black-bg.button--text-white.button--fix-btn-about-company(type="button", value="About company")
 
             div.unit.unit--horizontal-double-unit.unit--soft-gold
                 div.unit__person-info-wrap
@@ -219,6 +225,7 @@ div.main.main--theme-white-gr
                     input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left.button--fix-btn-view-project(type="button", value="view project")
 
             div.unit.unit--big-bg-layer-unit.unit--theme-foto
+                div.unit__picture--theme-rest
                 div.unit__bottom-right-unit-wrap
                     div.unit.unit--theme-info
                         div.unit__fix-padding-unit-with-arrow-hower
