--- a/app/views/header/home-page-header.pug
+++ b/app/views/header/home-page-header.pug
@@ -1,12 +1,13 @@
 header.header.header--theme-home-page
     // Фон для шапки сайта
     div.header__bg.header__bg-inner.header__bg_theme-gray.header__bg--height-home-page
-        img(src="../img/header-home-920px.jpg", width="920px", height="826px", alt="head banner")
+        div.header__bg.header__bg--theme-head-banner-left-part
     div.header__bg.header__bg-inner.header__bg--theme-dark-grey.header__bg--height-home-page.header__bg--part-right
     // Контент для шапки
     div.header__content.header__content-inner
         //Фон в контенте шапки
         div.header__content-bg.header__content-bg-inner.header__content-bg__theme-transparent.header__content-bg--height-home-page
+            div.header__bg.header__bg--theme-head-banner
         //Контейнер в контенте шапки для содержимого типа лого, меню и т.д
         div.header__container.header__content-container-inner
             // Блок для Лого
