Рефакторинг страницы home-page. В поменяна картинка general contracting в основной контент сайта

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -675,7 +675,8 @@ body {
 .unit__picture--theme-contr {
   width: 293px;
   height: 293px;
-  background: url("../img/contr.jpg") no-repeat center;
+  background: url("../img/subcontract.jpg") no-repeat center;
+  background-size: auto 100%;
 }
 .unit__picture--theme-desing {
   width: 293px;
