--- a/app/stylus/blocks/unit/__picture/__picture.styl
+++ b/app/stylus/blocks/unit/__picture/__picture.styl
@@ -2,7 +2,8 @@
   &--theme-contr
     width 293px
     height 293px
-    background url("../img/contr.jpg") no-repeat center
+    background url("../img/subcontract.jpg") no-repeat center
+    background-size auto 100%
 
   &--theme-desing
     width 293px
