--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -20,7 +20,8 @@ div.main.main--theme-white-gr
 
                 div.unit__info-wrap
                     span.unit__info.unit__info--biggest-medium.unit__info--letter-spacing4.unit__info--black-text 01
-                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--letter-spacing2.unit__info--black-text /03
+                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--letter-spacing2.unit__info--black-text.unit__info--rotated-slesh /
+                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--letter-spacing2.unit__info--black-text 03
 
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-prev
@@ -67,7 +68,8 @@ div.main.main--theme-white-gr
 
                 div.unit__info-wrap
                     span.unit__info.unit__info--biggest-medium.unit__info--fix-right-margin4.unit__info--black-text.unit__info--letter-spacing1 03
-                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--black-text  / 06
+                    span.unit__info.unit__info--supper.unit__info--medium.unit__info--letter-spacing2.unit__info--black-text.unit__info--rotated-slesh.unit__info--left-right-margin5 /
+                    span.unit__info.unit__info--supper.unit__info--medium.unit__info--black-text 06
 
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-prev-hover
@@ -234,8 +236,9 @@ div.main.main--theme-white-gr
                                 div.icon.icon--arrow-next-inside
 
                         div.unit__info-wrap
-                            span.unit__info.unit__info--big-medium.unit__info--black-text.unit__info--fix-right-margin6 01
-                            span.unit__info.unit__info--supper.unit__info--medium.unit__info--letter-spacing1.unit__info--black-text  / 09
+                            span.unit__info.unit__info--biggest-medium.unit__info--black-text.unit__info--fix-right-margin6 01
+                            span.unit__info.unit__info--supper.unit__info--medium.unit__info--letter-spacing2.unit__info--black-text.unit__info--rotated-slesh.unit__info--left-right-margin5 /
+                            span.unit__info.unit__info--supper.unit__info--medium.unit__info--black-text 09
 
                         div.unit__button-arrow-wrap
                             button.button.button--theme-arrow.button--arrow-prev
