--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -60,6 +60,13 @@
     transform scaleX(.8)
     //font-stretch condensed
 
+  &--rotated-slesh
+    display inline-block
+    transform rotateZ(6deg)
+
+  &--left-right-margin5
+    margin 0 5px
+
   &--space
     display inline-block
     width 12px
