--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -18,6 +18,14 @@
     font-weight 600
     font-family Montserrat, sans-serif;
 
+  &--norm-regular
+    font-size 14px
+    font-family Montserrat-reg, sans-serif;
+
+  &--norm-bold
+    font-size 14px
+    font-family Montserrat-bold, sans-serif;
+
   &--medium
     font-size 22px
     font-weight 500
@@ -33,10 +41,17 @@
     font-weight 500
     font-family Montserrat, sans-serif;
 
+  &--big-regular
+    font-size 36px
+    font-family Montserrat-reg, sans-serif;
+
   &--biggest-medium
     font-size 38px
     font-weight 500
     font-family Montserrat, sans-serif;
+
+  &--letter-spacing03
+    letter-spacing .3px
 
   &--letter-spacing1
     letter-spacing 1px
