--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -1,3 +1,14 @@
+@font-face
+  font-family Montserrat-reg
+  font-style normal
+  src url(../fonts/montserrat/Montserrat-Regular.ttf)
+
+@font-face
+  font-family Montserrat-bold
+  font-style normal
+  src url(../fonts/montserrat/Montserrat-Bold.ttf)
+
+
 body
   margin 0
 /*Блок для размещения шапки сайта*/
