--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -149,14 +149,15 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--ligthinig-blue
-                span.unit__info.unit__info--block41.unit__info--biggest-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
-                    span.unit__info.unit__info--condensed-letter 5
-                    span.unit__info.unit__info--condensed-letter 5
-                    span.unit__info.unit__info--space
-                    span.unit__info.unit__info--condensed-letter 0
-                    span.unit__info.unit__info--condensed-letter 0
-                    span.unit__info.unit__info--condensed-letter 0
-                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Expert Witness
+                span.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 55 000
+                //span.unit__info.unit__info--block41.unit__info--biggest-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
+                //    span.unit__info.unit__info--condensed-letter 5
+                //    span.unit__info.unit__info--condensed-letter 5
+                //    span.unit__info.unit__info--space
+                //    span.unit__info.unit__info--condensed-letter 0
+                //    span.unit__info.unit__info--condensed-letter 0
+                //    span.unit__info.unit__info--condensed-letter 0
+                span.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Expert Witness
 
             div.unit.unit--theme-foto
                 div.icon.icon--blue-square
