Рефакторинг страницы home-page. Блоки с цифрами

--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -149,29 +149,15 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--ligthinig-blue
-                span.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 55 000
-                //span.unit__info.unit__info--block41.unit__info--biggest-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
-                //    span.unit__info.unit__info--condensed-letter 5
-                //    span.unit__info.unit__info--condensed-letter 5
-                //    span.unit__info.unit__info--space
-                //    span.unit__info.unit__info--condensed-letter 0
-                //    span.unit__info.unit__info--condensed-letter 0
-                //    span.unit__info.unit__info--condensed-letter 0
-                span.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Expert Witness
+                span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 55 000
+                span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Expert Witness
 
             div.unit.unit--theme-foto
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--raindrop
-                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
-                    span.unit__info.unit__info--condensed-letter 1
-                    span.unit__info.unit__info--condensed-letter 2
-                    span.unit__info.unit__info--condensed-letter 4
-                    span.unit__info.unit__info--space
-                    span.unit__info.unit__info--condensed-letter 6
-                    span.unit__info.unit__info--condensed-letter 0
-                    span.unit__info.unit__info--condensed-letter 0
-                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Construction
+                span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 124 600
+                span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Construction
 
             div.unit.unit--theme-blue
                 h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text News
@@ -197,27 +183,15 @@ div.main.main--theme-white-gr
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg.icon--blue-square-bg--grey
                         div.icon.icon--setting-tool-blue
-                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
-                    span.unit__info.unit__info--condensed-letter 1
-                    span.unit__info.unit__info--condensed-letter 8
-                    span.unit__info.unit__info--space
-                    span.unit__info.unit__info--condensed-letter 0
-                    span.unit__info.unit__info--condensed-letter 0
-                    span.unit__info.unit__info--condensed-letter 0
-                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Procurement
+                span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 18 000
+                span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Procurement
 
             div.unit.unit--white
                 div.icon.icon--blue-square
                     div.icon.icon--blue-square-bg
                         div.icon.icon--light-bulb
-                span.unit__info.unit__info--block41.unit__info--big-medium.unit__info--dark-grey-text.unit__info--letter-spacing1
-                    span.unit__info.unit__info--condensed-letter 7
-                    span.unit__info.unit__info--condensed-letter 8
-                    span.unit__info.unit__info--space
-                    span.unit__info.unit__info--condensed-letter 1
-                    span.unit__info.unit__info--condensed-letter 5
-                    span.unit__info.unit__info--condensed-letter 0
-                span.unit__info.unit__info--block.unit__info--norm-medium.unit__info--grey-text Project Managments
+                span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 78 150
+                span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Project Managments
 
             div.unit.unit--vertical-double-unit.unit--white
                 h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text.unit__title--uppercase-disabled.unit__title--fix-for-contemporary-vila Contemporary Villa
