Рефакторинг страницы home-page. Подмена шрифта на всей странице

--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -8,8 +8,7 @@
 
   &--theme-unit-btn
     padding 15px 25px 16px 21px
-    font-weight 600
-    font-family Montserrat, sans-serif;
+    font-family Montserrat-reg, sans-serif;
     text-transform uppercase
 
     border none
