--- a/app/stylus/blocks/unit/__article/__article.styl
+++ b/app/stylus/blocks/unit/__article/__article.styl
@@ -1,8 +1,7 @@
 &__article
   font-size 14px
   line-height 22px
-  font-weight 500
-  font-family Montserrat, sans-serif;
+  font-family Montserrat-reg, sans-serif;
 
   &--black-text
     color #363636
