--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -13,6 +13,10 @@
     font-weight 600
     font-family Montserrat, sans-serif;
 
+  &--small-regular
+    font-size 12px
+    font-family Montserrat-reg, sans-serif;
+
   &--norm-medium
     font-size 14px
     font-weight 600
@@ -30,6 +34,10 @@
     font-size 22px
     font-weight 500
     font-family Montserrat, sans-serif;
+
+  &--medium-regular
+    font-size 22px
+    font-family Montserrat-reg, sans-serif;
 
   &--medium23
     font-size 23px
@@ -49,6 +57,10 @@
     font-size 38px
     font-weight 500
     font-family Montserrat, sans-serif;
+
+  &--biggest-regualr
+    font-size 38px
+    font-family Montserrat-reg, sans-serif;
 
   &--letter-spacing03
     letter-spacing .3px
