--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -19,9 +19,8 @@ div.main.main--theme-white-gr
                         div.icon.icon--arrow-next-inside
 
                 div.unit__info-wrap
-                    span.unit__info.unit__info--biggest-medium.unit__info--letter-spacing4.unit__info--black-text 01
-                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--letter-spacing2.unit__info--black-text.unit__info--rotated-slesh /
-                    span.unit__info.unit__info--supper.unit__info--medium23.unit__info--letter-spacing2.unit__info--black-text 03
+                    span.unit__info.unit__info--big-regular.unit__info--letter-spacing4.unit__info--black-text 01
+                    span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--letter-spacing2.unit__info--black-text /03
 
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-prev
@@ -37,7 +36,7 @@ div.main.main--theme-white-gr
                         div.icon.icon--theme-circle-bg
                             div.icon.icon--theme-play-arrow
 
-                    span.unit__info.unit__info--small-medium.unit__info--white-text.unit__info--uppercase Company video
+                    span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--white-text.unit__info--uppercase Company video
 
             div.unit
 
@@ -67,9 +66,9 @@ div.main.main--theme-white-gr
                         div.icon.icon--arrow-next-inside
 
                 div.unit__info-wrap
-                    span.unit__info.unit__info--biggest-medium.unit__info--fix-right-margin4.unit__info--black-text.unit__info--letter-spacing1 03
-                    span.unit__info.unit__info--supper.unit__info--medium.unit__info--letter-spacing2.unit__info--black-text.unit__info--rotated-slesh.unit__info--left-right-margin5 /
-                    span.unit__info.unit__info--supper.unit__info--medium.unit__info--black-text 06
+                    span.unit__info.unit__info--big-regular.unit__info--fix-right-margin4.unit__info--black-text.unit__info--letter-spacing1 03
+                    span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text.unit__info--left-right-margin5 /
+                    span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text 06
 
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-prev-hover
@@ -95,14 +94,14 @@ div.main.main--theme-white-gr
             div.unit.unit--theme-yellow
                 div.unit__download-price-wrap
                     div.icon.icon--theme-pdf
-                    span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Download price
+                    span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--black-text.unit__info--uppercase Download price
 
             div.unit.unit--theme-blue
                 div.unit__contact-us-wrap
                     div.icon.icon--theme-contact-circle
                         div.icon.icon--theme-contact-circle-bg
                     div.icon.icon--theme-play-arrow-down
-                    span.unit__info.unit__info--small-medium.unit__info--white-text.unit__info--uppercase Contact us
+                    span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--white-text.unit__info--uppercase Contact us
 
             div.unit.unit--bg-layer-unit
                 div.unit.unit--bg-unit-width959.unit--dark-grey
@@ -117,7 +116,7 @@ div.main.main--theme-white-gr
             div.unit.unit--horizontal-double-unit.unit--white
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-medium.unit__info--black-text Martin H. Jhonsons
+                    span.unit__info.unit__info--norm-bold.unit__info--black-text Martin H. Jhonsons
                     div.unit__person-rate-inline-wrap
                         div.icon.icon--person-rate4
                         div.icon.icon--person-rate1none
@@ -135,7 +134,7 @@ div.main.main--theme-white-gr
             div.unit.unit--horizontal-double-unit.unit--soft-gold
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-medium.unit__info--black-text Tony SH. Schults
+                    span.unit__info.unit__info--norm-bold.unit__info--black-text Tony SH. Schults
                     div.unit__person-rate-inline-wrap
                         div.icon.icon--person-rate5
 
@@ -172,7 +171,7 @@ div.main.main--theme-white-gr
             div.unit.unit--white
                 div.unit__person-info-wrap
                     div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-medium.unit__info--black-text David Mc. Adams
+                    span.unit__info.unit__info--norm-bold.unit__info--black-text David Mc. Adams
                     div.unit__person-rate-inline-wrap
                         div.icon.icon--person-rate4
                         div.icon.icon--person-rate1none
@@ -211,9 +210,9 @@ div.main.main--theme-white-gr
                                 div.icon.icon--arrow-next-inside
 
                         div.unit__info-wrap
-                            span.unit__info.unit__info--biggest-medium.unit__info--black-text.unit__info--fix-right-margin6 01
-                            span.unit__info.unit__info--supper.unit__info--medium.unit__info--letter-spacing2.unit__info--black-text.unit__info--rotated-slesh.unit__info--left-right-margin5 /
-                            span.unit__info.unit__info--supper.unit__info--medium.unit__info--black-text 09
+                            span.unit__info.unit__info--big-regular.unit__info--black-text.unit__info--fix-right-margin6 01
+                            span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text.unit__info--left-right-margin5 /
+                            span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text 09
 
                         div.unit__button-arrow-wrap
                             button.button.button--theme-arrow.button--arrow-prev
@@ -223,7 +222,7 @@ div.main.main--theme-white-gr
                 div.unit.unit--theme-yellow
                     div.unit__download-price-wrap
                         div.icon.icon--icon-stars
-                        span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Work with us
+                        span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--black-text.unit__info--uppercase Work with us
 
 
                 div.unit.unit--theme-blue
