--- a/app/css/main.css
+++ b/app/css/main.css
@@ -331,20 +331,17 @@ body {
 .unit__title--med-bold {
   width: 155px;
   font-size: 18px;
-  font-weight: 700;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-bold, sans-serif;
 }
 .unit__title--big-bold {
-  font-size: 27px;
-  font-weight: 700;
-  font-family: Montserrat, sans-serif;
+  font-size: 28px;
+  font-family: Montserrat-bold, sans-serif;
   text-transform: uppercase;
 }
 .unit__title--big-width {
   width: 315px;
-  margin-top: 2px;
-  margin-bottom: 10px;
-  line-height: 1.3;
+  margin-top: 3px;
+  margin-bottom: 11px;
 }
 .unit__title--med-width {
   width: 200px;
@@ -433,6 +430,10 @@ body {
   font-weight: 600;
   font-family: Montserrat, sans-serif;
 }
+.unit__info--small-regular {
+  font-size: 12px;
+  font-family: Montserrat-reg, sans-serif;
+}
 .unit__info--norm-medium {
   font-size: 14px;
   font-weight: 600;
@@ -450,6 +451,10 @@ body {
   font-size: 22px;
   font-weight: 500;
   font-family: Montserrat, sans-serif;
+}
+.unit__info--medium-regular {
+  font-size: 22px;
+  font-family: Montserrat-reg, sans-serif;
 }
 .unit__info--medium23 {
   font-size: 23px;
@@ -469,6 +474,10 @@ body {
   font-size: 38px;
   font-weight: 500;
   font-family: Montserrat, sans-serif;
+}
+.unit__info--biggest-regualr {
+  font-size: 38px;
+  font-family: Montserrat-reg, sans-serif;
 }
 .unit__info--letter-spacing03 {
   letter-spacing: 0.3px;
@@ -611,8 +620,7 @@ body {
 .unit__article {
   font-size: 14px;
   line-height: 22px;
-  font-weight: 500;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
 }
 .unit__article--black-text {
   color: #363636;
@@ -820,8 +828,7 @@ body {
   padding-top: 4px;
   padding-bottom: 14px;
   font-size: 18px;
-  font-weight: 500;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
   color: #fff;
   background-color: transparent;
 }
@@ -942,8 +949,7 @@ body {
 }
 .button--theme-unit-btn {
   padding: 15px 25px 16px 21px;
-  font-weight: 600;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
   text-transform: uppercase;
   border: none;
 }
