--- a/app/stylus/blocks/form/form.styl
+++ b/app/stylus/blocks/form/form.styl
@@ -6,8 +6,7 @@
       padding-top 4px
       padding-bottom 14px
       font-size 18px
-      font-weight 500
-      font-family Montserrat, sans-serif;
+      font-family Montserrat-reg, sans-serif;
       color white
       background-color transparent
 
