--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -9,20 +9,17 @@
   &--med-bold
     width 155px
     font-size 18px
-    font-weight 700
-    font-family Montserrat, sans-serif;
+    font-family Montserrat-bold, sans-serif;
 
   &--big-bold
-    font-size 27px
-    font-weight 700
-    font-family Montserrat, sans-serif;
+    font-size 28px
+    font-family Montserrat-bold, sans-serif;
     text-transform uppercase
 
   &--big-width
     width 315px
-    margin-top 2px
-    margin-bottom 10px
-    line-height 1.3
+    margin-top 3px
+    margin-bottom 11px
 
   &--med-width
     width 200px
