Рефакторинг страницы home-page. Блок News и subscribe

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -325,8 +325,7 @@ body {
 }
 .unit__title--med-regular {
   font-size: 18px;
-  font-weight: 500;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
 }
 .unit__title--med-bold {
   width: 155px;
@@ -372,6 +371,9 @@ body {
 .unit__title--letter-spacing018 {
   letter-spacing: 0.18px;
 }
+.unit__title--letter-spacing1 {
+  letter-spacing: 1px;
+}
 .unit__title--uppercase-disabled {
   text-transform: none;
 }
@@ -382,6 +384,7 @@ body {
 .unit__title--fix-for-news {
   margin-top: 0;
   margin-bottom: 23px;
+  font-weight: normal;
 }
 .unit__title--fix-for-contemporary-vila {
   margin-top: -6px;
@@ -436,8 +439,7 @@ body {
 }
 .unit__info--norm-medium {
   font-size: 14px;
-  font-weight: 600;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
 }
 .unit__info--norm-regular {
   font-size: 14px;
@@ -537,8 +539,8 @@ body {
   text-transform: uppercase;
 }
 .unit__info--fix-for-news {
-  margin-top: 30px;
-  margin-bottom: 6px;
+  margin-top: 29px;
+  margin-bottom: 7px;
 }
 .unit__info--fix-for-popular-posts {
   margin-top: 19px;
@@ -843,9 +845,8 @@ body {
   width: 100%;
   padding: 13px 7px 13px 11px;
   box-sizing: border-box;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
   font-size: 14px;
-  font-weight: 600;
   color: #59a9d6;
   background-color: #fff;
 }
@@ -863,9 +864,8 @@ body {
   color: #fff;
 }
 .form__submit--small-text {
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
   font-size: 12px;
-  font-weight: 600;
   text-transform: uppercase;
 }
 .form__submit--white-text {
@@ -874,7 +874,7 @@ body {
 .form__submit--theme-link-submit {
   float: right;
   margin-top: 30px;
-  margin-right: -7px;
+  margin-right: -4px;
   border: none;
   background-color: #2297d8;
 }
