--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -3,8 +3,8 @@
 
   &--med-regular
     font-size 18px
-    font-weight 500
-    font-family Montserrat, sans-serif;
+    //font-weight 500
+    font-family Montserrat-reg, sans-serif;
 
   &--med-bold
     width 155px
@@ -50,6 +50,9 @@
   &--letter-spacing018
     letter-spacing .18px
 
+  &--letter-spacing1
+    letter-spacing 1px
+
   &--uppercase-disabled
     text-transform none
 
@@ -60,6 +63,7 @@
   &--fix-for-news
     margin-top 0
     margin-bottom 23px
+    font-weight normal
 
   &--fix-for-contemporary-vila
     margin-top -6px
