--- a/app/stylus/blocks/form/form.styl
+++ b/app/stylus/blocks/form/form.styl
@@ -21,9 +21,9 @@
       width 100%
       padding 13px 7px 13px 11px
       box-sizing border-box
-      font-family Montserrat, sans-serif;
+      font-family Montserrat-reg, sans-serif;
       font-size 14px
-      font-weight 600
+      //font-weight 600
       color #59a9d6
       background-color white
 
@@ -45,9 +45,9 @@
   &__submit
 
     &--small-text
-      font-family Montserrat, sans-serif;
+      font-family Montserrat-reg, sans-serif;
       font-size 12px
-      font-weight 600
+      //font-weight 600
       text-transform uppercase
 
     &--white-text
@@ -56,7 +56,7 @@
     &--theme-link-submit
       float right
       margin-top 30px
-      margin-right -7px
+      margin-right -4px
       border none
       background-color #2297d8
 
