--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -19,8 +19,7 @@
 
   &--norm-medium
     font-size 14px
-    font-weight 600
-    font-family Montserrat, sans-serif;
+    font-family Montserrat-reg, sans-serif;
 
   &--norm-regular
     font-size 14px
@@ -121,8 +120,8 @@
     text-transform uppercase
 
   &--fix-for-news
-    margin-top 30px
-    margin-bottom 6px
+    margin-top 29px
+    margin-bottom 7px
 
   &--fix-for-popular-posts
     margin-top 19px
