--- a/app/css/main.css
+++ b/app/css/main.css
@@ -119,9 +119,9 @@ body {
 }
 .logo__text {
   color: #fff;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-bold, sans-serif;
   font-size: 27px;
-  font-weight: 700;
+  letter-spacing: 1px;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -182,15 +182,13 @@ body {
 }
 .menu__icon-super_theme-text {
   color: #363636;
-  font-family: Montserrat, sans-serif;
-  font-size: 11px;
-  font-weight: 600;
+  font-family: Montserrat-reg, sans-serif;
+  font-size: 12px;
   vertical-align: super;
 }
 .menu__icon-super_theme-sq-yellow {
   width: 21px;
-  height: 15px;
-  padding-top: 1px;
+  height: 16px;
   text-align: center;
   background-color: #ffe400;
 }
