--- a/app/stylus/blocks/logo/logo.styl
+++ b/app/stylus/blocks/logo/logo.styl
@@ -8,9 +8,10 @@
 
   &__text
     color white
-    font-family Montserrat, sans-serif;
+    font-family Montserrat-bold, sans-serif;
     font-size 27px
-    font-weight 700
+    letter-spacing 1px
+    //font-weight 700
     text-transform uppercase
     text-decoration none
 
