--- a/app/stylus/blocks/menu/menu.styl
+++ b/app/stylus/blocks/menu/menu.styl
@@ -45,14 +45,13 @@
 
     &_theme-text
       color #363636
-      font-family Montserrat, sans-serif;
-      font-size 11px
-      font-weight 600
+      font-family Montserrat-reg, sans-serif;
+      font-size 12px
+      //font-weight 600
       vertical-align super
 
     &_theme-sq-yellow
       width 21px
-      height 15px
-      padding-top 1px
+      height 16px
       text-align center
       background-color #ffe400
