Рефакторинг страницы home-page. блок footer

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -328,15 +328,15 @@ body
 
   &_theme-text
     color #9b9b9b
-    font-family Montserrat, sans-serif;
+    font-family Montserrat-reg, sans-serif;
     font-size 12px
-    font-weight 600
+    //font-weight 600
 
   &_theme-text-menu
     color #a2a2a2
-    font-family Montserrat, sans-serif;
+    font-family Montserrat-reg, sans-serif;
     font-size 12px
-    font-weight 600
+    //font-weight 600
 
   &_theme-text-mark
     color: #2297d8
@@ -370,7 +370,7 @@ body
       clear both
 
     &--menu-items-space
-      margin-right 30px
+      margin-right 32px
 
     &--fix-inner-our-service-page
       position relative
