--- a/app/css/main.css
+++ b/app/css/main.css
@@ -890,15 +890,13 @@ body {
 }
 .footer_theme-text {
   color: #9b9b9b;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
   font-size: 12px;
-  font-weight: 600;
 }
 .footer_theme-text-menu {
   color: #a2a2a2;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
   font-size: 12px;
-  font-weight: 600;
 }
 .footer_theme-text-mark {
   color: #2297d8;
@@ -930,7 +928,7 @@ body {
   clear: both;
 }
 .footer__container--menu-items-space {
-  margin-right: 30px;
+  margin-right: 32px;
 }
 .footer__container--fix-inner-our-service-page {
   position: relative;
