Рефакторинг страницы our-services.

--- a/app/stylus/blocks/unit/__number/__number.styl
+++ b/app/stylus/blocks/unit/__number/__number.styl
@@ -1,15 +1,15 @@
 &__number
   width 71px
-  padding-top 20px
+  padding-top 19px
   padding-bottom 18px
 
   &--theme-yellow-bg
     background-color #ffe400
 
   &--text
-    font-size 27px
-    font-weight 500
-    font-family Montserrat, sans-serif;
+    font-size 28px
+    //font-weight 500
+    font-family Montserrat-reg, sans-serif;
     color #363636
 
   &--centered-text
