--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -182,12 +182,13 @@ body
   &__text
     display block
     position relative
-    top 19px
-    left 28px
+    top 18px
+    left 29px
     color #363636
-    font-family Montserrat, sans-serif;
+    font-family Montserrat-reg, sans-serif;
     font-size 28px
-    font-weight 600
+    //font-weight 600
+    letter-spacing .2px
     text-transform uppercase
 
 /*====================Блок Тело сайта=========================*/
