--- a/app/css/main.css
+++ b/app/css/main.css
@@ -201,12 +201,12 @@ body {
 .caption__text {
   display: block;
   position: relative;
-  top: 19px;
-  left: 28px;
+  top: 18px;
+  left: 29px;
   color: #363636;
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat-reg, sans-serif;
   font-size: 28px;
-  font-weight: 600;
+  letter-spacing: 0.2px;
   text-transform: uppercase;
 }
 /*====================Блок Тело сайта=========================*/
@@ -389,6 +389,7 @@ body {
 }
 .unit__title--fix-for-popular-posts {
   margin-bottom: 24px;
+  font-weight: normal;
 }
 .unit__horizontal {
   width: 30px;
@@ -697,16 +698,15 @@ body {
 }
 .unit__number {
   width: 71px;
-  padding-top: 20px;
+  padding-top: 19px;
   padding-bottom: 18px;
 }
 .unit__number--theme-yellow-bg {
   background-color: #ffe400;
 }
 .unit__number--text {
-  font-size: 27px;
-  font-weight: 500;
-  font-family: Montserrat, sans-serif;
+  font-size: 28px;
+  font-family: Montserrat-reg, sans-serif;
   color: #363636;
 }
 .unit__number--centered-text {
