--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -4,22 +4,22 @@ div.main.main--theme-white-gr
         //Колонка для всего остального
         aside.main__column-aside.main__column-inner-right
             div.unit.unit--theme-blue
-                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text popular posts
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing1.unit__title--white-text popular posts
                 p.unit__info.unit__info--norm-medium.unit__info--white-blue-text.unit__info--fix-for-popular-posts 12 february, 2015
                 h3.unit__title.unit__title--med-regular.unit__title--white-text.unit__title--fix-for-popular-posts Project Design and Engineering Services
                 p.unit__info.unit__info--norm-medium.unit__info--white-blue-text 23 comments
                 div.unit__horiz-inline-wrap.unit__horiz-bottom-wrap
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
-                    hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
-                    hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
+                    hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity02.unit__horizontal--inline
+                    hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity02.unit__horizontal--inline
 
             div.unit.unit--theme-yellow
                 div.unit__download-price-wrap
                     div.icon.icon--theme-pdf
-                    span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Download price
+                    span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--black-text.unit__info--uppercase Download price
 
             div.unit.unit--theme-blue
-                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing018.unit__title--white-text subscribe
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--letter-spacing1.unit__title--white-text subscribe
                 hr.unit__horizontal.unit__horizontal--white-solid
                 div.unit__inner-form-aside
                     form.form
@@ -29,7 +29,7 @@ div.main.main--theme-white-gr
             div.unit.unit--theme-yellow
                 div.unit__download-price-wrap
                     div.icon.icon--icon-stars
-                    span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Work with us
+                    span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--black-text.unit__info--uppercase Work with us
 
         //Колонка для главного содержимого сайта
         main.main__column-main.main__column-main--theme-inline.main__column-inner-left
