--- a/app/views/footer/footer-our-service.pug
+++ b/app/views/footer/footer-our-service.pug
@@ -10,11 +10,11 @@ footer.footer.footer_theme-white-grey
                     li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="our-services.html", target="blank") Services
                     li.menu__item.footer__container--menu-items-space
-                        a.menu__item_text.footer_theme-text-menu(href="#") OurWorks
+                        a.menu__item_text.footer_theme-text-menu(href="#") Our Works
                     li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") News & events
                     li.menu__item.footer__container--menu-items-space
-                        a.menu__item_text.footer_theme-text-menu(href="#") Worck with us
+                        a.menu__item_text.footer_theme-text-menu(href="#") Work with us
                     li.menu__item.footer__container--menu-items-space
                         a.menu__item_text.footer_theme-text-menu(href="#") F.A.Q
                     li.menu__item.footer__container--menu-items-space
