--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -67,68 +67,79 @@ div.main.main--theme-white-gr
 
         //Колонка для главного содержимого сайта
         main.main__column-main.main__column-main--theme-inline.main__column-inner-left
-            div.main__double-unit
-                div.unit.unit--bg-layer-unit
-                    div.unit.unit--theme-info
-                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text General Contracting
-                        hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                    div.unit__arrow.unit__arrow--down
-                div.unit.unit--theme-foto
-                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
-                        span.unit__number.unit__number--text 1
+            -
+                var blocks = [
+                    {
+                        title: "General Contracting",
+                        article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
+                        image:"",
+                        postIdx: "1",
+                        arrowDir: "unit__arrow--down"
+                    },
+                    {
+                        title: "Project design and engineering",
+                        article: "Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.",
+                        image:"",
+                        postIdx: "2",
+                        arrowDir: "unit__arrow--up"
+                    },
+                    {
+                        title: "Capital Improvements",
+                        article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
+                        image:"",
+                        postIdx: "3",
+                        arrowDir: "unit__arrow--down"
+                    },
+                    {
+                        title: "Construction",
+                        article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
+                        image:"",
+                        postIdx: "4",
+                        arrowDir: "unit__arrow--down"
+                    },
+                    {
+                        title: "Expert Witness",
+                        article: "Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.",
+                        image:"",
+                        postIdx: "5",
+                        arrowDir: "unit__arrow--up"
+                    },
+                    {
+                        title: "Procurement",
+                        article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
+                        image:"",
+                        postIdx: "6",
+                        arrowDir: "unit__arrow--down"
+                    }
 
-            div.main__double-unit
-                div.unit.unit--theme-foto
-                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
-                        span.unit__number.unit__number--text 2
-                div.unit.unit--bg-layer-unit
-                    div.unit.unit--theme-info
-                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3-155.unit__title--black-text Project design and engineering
-                        hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
-                    div.unit__arrow.unit__arrow--up
+                ];
 
-            div.main__double-unit
-                div.unit.unit--bg-layer-unit
-                    div.unit.unit--theme-info
-                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Capital Improvements
-                        hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                    div.unit__arrow.unit__arrow--down
-                div.unit.unit--theme-foto
-                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
-                        span.unit__number.unit__number--text 3
+            mixin doubleBlockArrowDown(obj)
+                div.main__double-unit
+                    div.unit.unit--bg-layer-unit
+                        div.unit.unit--theme-info
+                            h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text= obj.title
+                            hr.unit__horizontal.unit__horizontal--black-solid
+                            p.unit__article.unit__article--gray-text= obj.article
+                        div(class="unit__arrow " + obj.arrowDir)
+                    div.unit.unit--theme-foto
+                        div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                            span.unit__number.unit__number--text= obj.postIdx
 
-            div.main__double-unit
-                div.unit.unit--bg-layer-unit
-                    div.unit.unit--theme-info
-                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Construction
-                        hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                    div.unit__arrow.unit__arrow--down
-                div.unit.unit--theme-foto
-                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
-                        span.unit__number.unit__number--text 4
+            mixin doubleBlockArrowUp(obj)
+                div.main__double-unit
+                    div.unit.unit--theme-foto
+                        div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                            span.unit__number.unit__number--text= obj.postIdx
+                    div.unit.unit--bg-layer-unit
+                        div.unit.unit--theme-info
+                            h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text= obj.title
+                            hr.unit__horizontal.unit__horizontal--black-solid
+                            p.unit__article.unit__article--gray-text= obj.article
+                        div(class="unit__arrow " + obj.arrowDir)
 
-            div.main__double-unit
-                div.unit.unit--theme-foto
-                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
-                        span.unit__number.unit__number--text 5
-                div.unit.unit--bg-layer-unit
-                    div.unit.unit--theme-info
-                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3-136.unit__title--black-text Expert Witness
-                        hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
-                    div.unit__arrow.unit__arrow--up
-
-            div.main__double-unit
-                div.unit.unit--bg-layer-unit
-                    div.unit.unit--theme-info
-                        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Procurement
-                        hr.unit__horizontal.unit__horizontal--black-solid
-                        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                    div.unit__arrow.unit__arrow--down
-                div.unit.unit--theme-foto
-                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
-                        span.unit__number.unit__number--text 6
+            for dBlock in blocks
+                if (dBlock.arrowDir === "unit__arrow--down")
+                    +doubleBlockArrowDown(dBlock)
+                else
+                    +doubleBlockArrowUp(dBlock)
