--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -41,9 +41,10 @@ div.main.main--theme-white-gr
                         hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity02.unit__horizontal--inline
 
             mixin blockIcon(obj)
+                - var iconAttr = {"class":["icon", obj.icon]};
                 div.unit.unit--theme-yellow
                     div.unit__download-price-wrap
-                        div(class="icon " + obj.icon)
+                        div&attributes(iconAttr)
                         span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--black-text.unit__info--uppercase= obj.title
 
             mixin blockSubscribe(obj)
@@ -74,42 +75,42 @@ div.main.main--theme-white-gr
                         article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
                         image:"",
                         postIdx: "1",
-                        arrowDir: "unit__arrow--down"
+                        arrowDir: "down"
                     },
                     {
                         title: "Project design and engineering",
                         article: "Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.",
                         image:"",
                         postIdx: "2",
-                        arrowDir: "unit__arrow--up"
+                        arrowDir: "up"
                     },
                     {
                         title: "Capital Improvements",
                         article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
                         image:"",
                         postIdx: "3",
-                        arrowDir: "unit__arrow--down"
+                        arrowDir: "down"
                     },
                     {
                         title: "Construction",
                         article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
                         image:"",
                         postIdx: "4",
-                        arrowDir: "unit__arrow--down"
+                        arrowDir: "down"
                     },
                     {
                         title: "Expert Witness",
                         article: "Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.",
                         image:"",
                         postIdx: "5",
-                        arrowDir: "unit__arrow--up"
+                        arrowDir: "up"
                     },
                     {
                         title: "Procurement",
                         article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
                         image:"",
                         postIdx: "6",
-                        arrowDir: "unit__arrow--down"
+                        arrowDir: "down"
                     }
 
                 ];
@@ -121,7 +122,7 @@ div.main.main--theme-white-gr
                             h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text= obj.title
                             hr.unit__horizontal.unit__horizontal--black-solid
                             p.unit__article.unit__article--gray-text= obj.article
-                        div(class="unit__arrow " + obj.arrowDir)
+                        div.unit__arrow.unit__arrow--down
                     div.unit.unit--theme-foto
                         div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
                             span.unit__number.unit__number--text= obj.postIdx
@@ -136,10 +137,10 @@ div.main.main--theme-white-gr
                             h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text= obj.title
                             hr.unit__horizontal.unit__horizontal--black-solid
                             p.unit__article.unit__article--gray-text= obj.article
-                        div(class="unit__arrow " + obj.arrowDir)
+                        div.unit__arrow.unit__arrow--up
 
             for dBlock in blocks
-                if (dBlock.arrowDir === "unit__arrow--down")
+                if (dBlock.arrowDir === "down")
                     +doubleBlockArrowDown(dBlock)
                 else
                     +doubleBlockArrowUp(dBlock)
