Рефакторинг. Поправлен стиль для положения кнопки в информационном блоке. Для миксинов добавлен отдельный файл. Создание цикла для страницы home-page

--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -142,7 +142,8 @@
 
   &__fix-btn-read-more-wrap
     position absolute
-    bottom 58px
+    /*bottom 58px*/
+    bottom 37px
 
   //Размещение формы в unit aside
   &__inner-form-aside
