--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -3,28 +3,30 @@ div.main.main--theme-white-gr
     div.main__content.main__content-inner.main__content--theme-transparent
 
         div.main__content-flex-wrap
+            //Миксины для блока
+            include mixins/block.pug
 
-            div.unit.unit--horizontal-double-unit.unit--theme-yellow
-                h2.unit__title.unit__title--big-bold.unit__title--big-width.unit__title--black-text building the world around us
-                hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--black-text Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.
-                div.unit__fix-btn-read-more-wrap
-                    input.button.button--theme-unit-btn.button--black-bg.button--text-white.unit__button-buttom-left(type="button", value="Read more")
+            //div.unit.unit--horizontal-double-unit.unit--theme-yellow
+            //    h2.unit__title.unit__title--big-bold.unit__title--big-width.unit__title--black-text building the world around us
+            //    hr.unit__horizontal.unit__horizontal--black-solid
+            //    p.unit__article.unit__article--black-text Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.
+            //    div.unit__fix-btn-read-more-wrap
+            //        input.button.button--theme-unit-btn.button--black-bg.button--text-white(type="button", value="Read more")
 
-            div.unit
+            //div.unit
 
-            div.unit.unit--theme-info
-                div.unit__button-arrow-wrap
-                    button.button.button--theme-arrow.button--arrow-next
-                        div.icon.icon--arrow-next-inside
-
-                div.unit__info-wrap
-                    span.unit__info.unit__info--big-regular.unit__info--letter-spacing4.unit__info--black-text 01
-                    span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--letter-spacing2.unit__info--black-text /03
-
-                div.unit__button-arrow-wrap
-                    button.button.button--theme-arrow.button--arrow-prev
-                        div.icon.icon--arrow-prev-inside
+            //div.unit.unit--theme-info
+            //    div.unit__button-arrow-wrap
+            //        button.button.button--theme-arrow.button--arrow-next
+            //            div.icon.icon--arrow-next-inside
+            //
+            //    div.unit__info-wrap
+            //        span.unit__info.unit__info--big-regular.unit__info--letter-spacing4.unit__info--black-text 01
+            //        span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--letter-spacing2.unit__info--black-text /03
+            //
+            //    div.unit__button-arrow-wrap
+            //        button.button.button--theme-arrow.button--arrow-prev
+            //            div.icon.icon--arrow-prev-inside
 
             div.unit
 
